--- a/style.css
+++ b/style.css
@@ -1,43 +1,66 @@
+*{
+    /* box-sizing: border-box; */
+    text-align: center;
+}
+
+
 Body {
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: #777 ;
-    background: #777 ;
-    width: 960px ;
-    font-size: 18px ;
+	color: #777;
+	background: #777;
+	width: 960px;
+	font-size: 18px;
+	margin: 0px auto 0px auto;
 }
-Header, Nav, Section, Footer {
-    margin: 10px auto 10px auto;
-    background: #ebebeb ;
-    width: 1000px;
-    padding: 30px;
-  
-    float: left;
 
+Header, Nav, Footer, section {
+	margin: 15px auto 15px auto;
+	background: #ebebeb; /* most have */
+    padding: 30px;
+} 
+
+header {
+	margin-bottom: 0px;
+}
+
+section {
+    width:495px; /* most have */
+    float: left;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding: 10px 0px 10px 0px;
     
 }
 
-aside{
-float: left;
-margin: 10px auto 10px auto;
-background: #ebebeb ;
-padding: 30px;
-clear: both;
-
-}
-
-
 Article {
-    color: #ebebeb; 
-    background: #777 ;
-}
-h1, p {
-    color: #777;
-     background: #ebebeb ;
-}
-section {
-    width:495px;
+	color: #ebebeb; /* most have */
+	background: #777; /* most have */
+	height: 160px;
+    padding: 10px;
+    padding-bottom: 10px;
+	box-sizing: border-box;
+	width: 480px;
+    margin: 10px;
 }
 
-*{
-    text-align: center;
+aside {
+	margin:15px 0px 10px 15px;
+	background: #ebebeb; /* most have */
+    padding: 30px;
+    float: left;
+    width: 390px;
+    height: 161px;
+	/* overflow: auto; */
+}
+
+h1, p {
+	color: #777; /* most have */
+	background: #ebebeb; /* most have */
+	border: 1px solid;
+	margin: 10px;
+    padding: 10px;
+}
+
+footer {
+    clear: both;
 }
