--- a/style.css
+++ b/style.css
@@ -5,15 +5,15 @@
 
 
 Body {
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	color: #777;
-	background: #777;
-	width: 960px;
-	font-size: 18px;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; /* most have */
+	color: #777; /* most have */
+	background: #777; /* most have */
+	width: 960px; /* most have */
+	font-size: 18px; /* most have */
 	margin: 0px auto 0px auto;
 }
 
-Header, Nav, Footer, section {
+Header, Nav, section {
 	margin: 15px auto 15px auto;
 	background: #ebebeb; /* most have */
     padding: 30px;
@@ -23,44 +23,83 @@ header {
 	margin-bottom: 0px;
 }
 
-section {
+
+#section {
     width:495px; /* most have */
     float: left;
-    padding-bottom: 10px;
-    padding-top: 10px;
-    padding: 10px 0px 10px 0px;
+    padding: 35px 0px 2px 0px;
     
 }
 
 Article {
 	color: #ebebeb; /* most have */
 	background: #777; /* most have */
-	height: 160px;
-    padding: 10px;
-    padding-bottom: 10px;
+	height: 170px;
+    padding: 15px 10px 10px 10px;
 	box-sizing: border-box;
 	width: 480px;
-    margin: 10px;
+    margin: 35px 10px 10px 10px;
 }
 
 aside {
 	margin:15px 0px 10px 15px;
 	background: #ebebeb; /* most have */
-    padding: 30px;
+    padding: 35px 30px 30px 30px;
     float: left;
     width: 390px;
-    height: 161px;
-	/* overflow: auto; */
+    height: 208px;
 }
 
-h1, p {
+#content1 {
 	color: #777; /* most have */
 	background: #ebebeb; /* most have */
 	border: 1px solid;
-	margin: 10px;
+	margin: 15px 10px 10px 10px;
     padding: 10px;
 }
 
-footer {
-    clear: both;
+#content2{
+	color: #777; /* most have */
+	background: #ebebeb; /* most have */
+	border: 1px solid;
+	margin: 10px 10px 15px 10px;
+    padding: 10px;
+}
+
+
+.clearfix:after {
+	visibility: hidden;
+	display: block;
+	font-size: 0;
+	content: " ";
+	clear: both;
+  }
+
+  footer{
+	  height:40px ;
+	  background: #ebebeb; /* most have */
+	  padding: 40px;
+	  margin-top: 10px;
+  }
+
+
+  header:hover {
+
+	background-color: blue;
+}
+
+
+footer:hover{
+	font-family: 'Times New Roman', Times, serif;
+	font-size: 80px;
+}
+
+aside:hover{
+	font-family: 'Times New Roman', Times, serif;
+	font-size: 80px;
+	color: purple;
+}
+
+nav:hover{
+	background: black;
 }
